--- a/Block Puzzle - 方块拼图 工具.html
+++ b/Block Puzzle - 方块拼图 工具.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Block Puzzle - 方块拼图 工具</title>
+    <title>Block Puzzle - 方块拼图 工具1</title>
     <link rel="stylesheet" href="./Block Puzzle - 方块拼图 工具_files/font-awesome.css">
     <script type="text/javascript" src="./Block Puzzle - 方块拼图 工具_files/c" async=""></script>
     <style>
